# Blog-app

./: db.sqlite3  pyproject.toml
blog/: forms.py  models.py  views.py
blog-py3.10/: pyvenv.cfg
blog/migrations/: 0001_initial.py  0002_remove_user_passwd_user_password.py  0003_alter_user_profile.py  0004_remove_user_icon_remove_user_profile.py  0005_user_icon_user_profile.py  0006_alter_blog_timeslot.py  0007_alter_blog_photos.py  0008_alter_user_icon.py  0009_alter_user_icon.py  0010_alter_user_icon.py  0011_alter_user_icon.py  0012_alter_user_icon.py  0013_alter_user_icon.py  0014_alter_user_icon.py  0015_alter_user_icon.py  0016_alter_user_icon.py  0017_alter_user_icon.py  0018_alter_user_icon.py  0019_alter_user_icon.py  0020_alter_user_icon.py  0021_remove_user_login_alter_user_profile.py  0022_user_login.py  0023_alter_user_login.py
blog/static/: style.css
blog/templates/: base.html  blog_list.html  create_blog.html  create_button.html  delete_blogs.html  delete_button.html  hello.html  login_logout_frame.html  register_form_frame.html  register_frame.html  register_userdata.html  user_icon.html  user_profile.html  user_profile_button.html
blog_project/: settings.py  urls.py
env/: pyvenv.cfg
media/: London.jfif
