[tool.poetry]
name = "blog-project"
version = "0.1.0"
description = ""
authors = ["s1270216aizu <taikiseto11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-htmx = "^1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
